<resources>
    <string name="app_name">ElementaryGame</string>
    <string name="configuracoes">Configurações</string>
    <string name="opcoes">Opções</string>
    <string name="ultimaJogada">Última Jogada</string>
    <string name="jogadaPlayer">Você</string>
    <string name="resultado">Resultado</string>
    <string name="jogadaAndroid">Android</string>
    <string name="nomeJogador">Nome do Jogador</string>
    <string name="sexoJogador">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="jogar">Jogar</string>
    <string name="brasil">Brazil</string>
    <string name="estadosUnidos">United States</string>
    <string name="espanha">Spain</string>
    <string name="japao">Japan</string>
</resources>
